@@ -43,8 +43,8 @@ PloneTestCase Readme
         - The constant 'PLONE30' which evaluates to true for Plone
           versions >= 3.0.
 
-        - The module 'utils' which contains all utils from the ZopeTestCase
-          package as well as additional functions for layer support.
+        - The module 'utils' which contains all utility functions from the
+          ZopeTestCase package.
 
 
     Example PloneTestCase::
