@@ -16,6 +16,8 @@ from Products.PloneTestCase.utils import *
 from Products.PloneTestCase.setup import PLONE21
 from Products.PloneTestCase.setup import PLONE25
 from Products.PloneTestCase.setup import PLONE30
+from Products.PloneTestCase.setup import USELAYER
+from Products.PloneTestCase.setup import Z3INTERFACES
 from Products.PloneTestCase.setup import portal_name
 from Products.PloneTestCase.setup import portal_owner
 from Products.PloneTestCase.setup import default_policy
